--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=electronicsDb
+spring.data.mongodb.database=${MONGODB_NAME:electronicsDb}
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost}
 server.port = 8081
